--- a/projects/templates/projects/welcome.html
+++ b/projects/templates/projects/welcome.html
@@ -27,7 +27,7 @@
             
 			<a class="btn btn--sub " href="{% url 'projects' %}"><h4>Explore</h4></a>
 			<!-- <a class="btn btn--sub" href="{% url 'create-project' %}"><h4>Upload project </h4></a> -->
-			<a class="btn btn--sub" href="{% url 'cnote' %}"><h4>Concept Note </h4></a>
+			<a class="btn btn--sub" href="{% url 'view-cnote' %}"><h4>Concept Note </h4></a>
             
           </form>
         
