--- a/projects/templates/projects/index.html
+++ b/projects/templates/projects/index.html
@@ -1,105 +1,464 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Exercise #1 || Product feature with video</title>
+{% extends 'main.html' %}
+{% load static %}
+{% block content %}
+<style>
+	@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+body{
+    margin: 0;
+	padding: 0;
+	overflow: hidden;
+    background-color: #000;
+    color: #eee;
+    font-family: Poppins;
+    font-size: 12px;
+}
+a{
+    text-decoration: none;
+}
 
-	<!-- Reset -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
 
-	<!-- Google Fonts -->
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;700&display=swap" rel="stylesheet">
 
-	<style>
-		html {
-			font-size: 16px;
-			font-family: 'Figtree', sans-serif;
-			line-height: 1.5;
-		}
+/* carousel */
+.carousel{
+    height: 100vh;
+    margin-top: -50px;
+    width: 100vw;
+    overflow: hidden;
+    position: relative;
+}
+.carousel .list .item{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    inset: 0 0 0 0;
+}
+.carousel .list .item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.carousel .list .item .content{
+    position: absolute;
+    top: 30%;
+    width: 1140px;
+    max-width: 80%;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-right: 30%;
+    box-sizing: border-box;
+    color: #fff;
+    text-shadow: 0 5px 10px #0004;
+}
+.carousel .list .item .author{
+    font-weight: bold;
+    letter-spacing: 10px;
+}
+.carousel .list .item .title,
+.carousel .list .item .topic{
+    font-size: 5em;
+    font-weight: bold;
+    line-height: 1.3em;
+}
+.carousel .list .item .topic{
+    color: #4ddfa2;
+}
+.carousel .list .item .buttons{
+    display: grid;
+    grid-template-columns: repeat(2, 130px);
+    grid-template-rows: 40px;
+    gap: 5px;
+    margin-top: 25px;
+}
+.carousel .list .item .buttons:hover{
+    cursor: pointer;
+	color: rgb(238, 217, 177);
+	transition: 0.7s ease-in-out;
+}
+.carousel .list .item .buttons button{
+    border: none;
+    background-color: #1356ad;
+    font-family: Poppins;
+    font-weight: 400;
+	cursor: pointer;
+	border-radius: 5px;
+}
 
-		body {
-			color: #D0D0D1;
-		}
 
-		.muted {
-			color: #8A8B8C;
-		}
+/* thumbail */
+.thumbnail{
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    width: max-content;
+    z-index: 100;
+    display: flex;
+    gap: 20px;
+}
+.thumbnail .item{
+    width: 150px;
+    height: 220px;
+    flex-shrink: 0;
+    position: relative;
+}
+.thumbnail .item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+.thumbnail .item .content{
+    color: #fff;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    right: 10px;
+}
+.thumbnail .item .content .title{
+    font-weight: 500;
+}
+.thumbnail .item .content .description{
+    font-weight: 300;
+}
+/* arrows */
+.arrows{
+    position: absolute;
+    top: 80%;
+    right: 52%;
+    z-index: 100;
+    width: 300px;
+    max-width: 30%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+.arrows button{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #eee4;
+    border: none;
+    color: #fff;
+    font-family: monospace;
+    font-weight: bold;
+    transition: .5s;
+}
+.arrows button:hover{
+    background-color: #fff;
+    color: #000;
+	transition: 0.5S ease-in-out;
+}
 
-		h2 {
-			margin: 0 0 1rem;
-		}
+/* animation */
+.carousel .list .item:nth-child(1){
+    z-index: 1;
+}
 
-		h2 {
-			margin: 1rem 0;
-		}
+/* animation text in first item */
 
-		h2 {
-			font-size: 2.25rem;
-		}
+.carousel .list .item:nth-child(1) .content .author,
+.carousel .list .item:nth-child(1) .content .title,
+.carousel .list .item:nth-child(1) .content .topic,
+.carousel .list .item:nth-child(1) .content .des,
+.carousel .list .item:nth-child(1) .content .buttons
+{
+    transform: translateY(50px);
+    filter: blur(20px);
+    opacity: 0;
+    animation: showContent .5s 1s linear 1 forwards;
+}
+@keyframes showContent{
+    to{
+        transform: translateY(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+}
+.carousel .list .item:nth-child(1) .content .title{
+    animation-delay: 1.2s!important;
+}
+.carousel .list .item:nth-child(1) .content .topic{
+    animation-delay: 1.4s!important;
+}
+.carousel .list .item:nth-child(1) .content .des{
+    animation-delay: 1.6s!important;
+}
+.carousel .list .item:nth-child(1) .content .buttons{
+    animation-delay: 1.8s!important;
+}
+/* create animation when next click */
+.carousel.next .list .item:nth-child(1) img{
+    width: 150px;
+    height: 220px;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    border-radius: 30px;
+    animation: showImage .5s linear 1 forwards;
+}
+@keyframes showImage{
+    to{
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+}
 
-		h3 {
-			font-size: 1rem;
-		}
+.carousel.next .thumbnail .item:nth-last-child(1){
+    overflow: hidden;
+    animation: showThumbnail .5s linear 1 forwards;
+}
+.carousel.prev .list .item img{
+    z-index: 100;
+}
+@keyframes showThumbnail{
+    from{
+        width: 0;
+        opacity: 0;
+    }
+}
+.carousel.next .thumbnail{
+    animation: effectNext .5s linear 1 forwards;
+}
 
-		.large {
-			font-size: 1.125rem;
-		}
+@keyframes effectNext{
+    from{
+        transform: translateX(150px);
+    }
+}
 
-		#feature {
-			background-color: #151618;
-			padding: 8rem 6rem;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			gap: 8rem;
-			height: 100vh;
-		}
+/* running time */
 
-		#feature header {
-			margin-bottom: 4rem;
-		}
+.carousel .time{
+    position: absolute;
+    z-index: 1000;
+    width: 0%;
+    height: 3px;
+    background-color: #f1683a;
+    left: 0;
+    top: 0;
+}
 
-		#content {
-			max-width: 40rem;
-		}
+.carousel.next .time,
+.carousel.prev .time{
+    animation: runningTime 3s linear 1 forwards;
+}
+@keyframes runningTime{
+    from{ width: 100%}
+    to{width: 0}
+}
 
-		#grid {
-			display: grid;
-			grid-template-columns: 1fr 1fr;
-			gap: 2rem;
-		}
 
-		/* Air */
-	</style>
-</head>
-<body>
-	<section id="feature">
-		<div id="content">
-			<header>
-				<h2>Innovation thrust</h2>
-				<p class="large muted">The "UniProjects" platform Promote collaboration, knowledge sharing, and recognition of students</p>
-			</header>
+/* prev click */
 
-			<div id="grid">
-				<div>
-					<img src="icons/icon-copy.svg" alt="Copy">
-					<h3>Upload Project</h3>
-					<p>Increases the visibility of UDOM student projects within the university community and beyond</p>
-				</div>
-				<div>
-					<img src="icons/icon-clock.svg" alt="Clock">
-					<h3>Upload Concept note</h3>
-					<p>Get instant access to critical information without any lag or delay.</p>
-				</div>
-			</div>
-		</div>
+.carousel.prev .list .item:nth-child(2){
+    z-index: 2;
+}
 
-		<div id="media">
-			<!-- Air -->
-		</div>
-	</section>
-</body>
-</html>
+.carousel.prev .list .item:nth-child(2) img{
+    animation: outFrame 0.5s linear 1 forwards;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+@keyframes outFrame{
+    to{
+        width: 150px;
+        height: 220px;
+        bottom: 50px;
+        left: 50%;
+        border-radius: 20px;
+    }
+}
+
+.carousel.prev .thumbnail .item:nth-child(1){
+    overflow: hidden;
+    opacity: 0;
+    animation: showThumbnail .5s linear 1 forwards;
+}
+.carousel.next .arrows button,
+.carousel.prev .arrows button{
+    pointer-events: none;
+}
+.carousel.prev .list .item:nth-child(2) .content .author,
+.carousel.prev .list .item:nth-child(2) .content .title,
+.carousel.prev .list .item:nth-child(2) .content .topic,
+.carousel.prev .list .item:nth-child(2) .content .des,
+.carousel.prev .list .item:nth-child(2) .content .buttons
+{
+    animation: contentOut 1.5s linear 1 forwards!important;
+}
+
+@keyframes contentOut{
+    to{
+        transform: translateY(-150px);
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
+@media screen and (max-width: 678px) {
+    .carousel .list .item .content{
+        padding-right: 0;
+    }
+    .carousel .list .item .content .title{
+        font-size: 30px;
+    }
+}
+
+</style>
+
+    <!-- carousel -->
+    <div class="carousel prev">
+        <!-- list item -->
+        <div class="list">
+            <div class="item">
+                <img src="{% static 'image/image1.png' %}" alt="" srcset="">
+                <div class="content">
+                    <div class="title">UNIPROJECT FOR</div>
+                    <div class="topic">INNOVATION</div>
+                    <div class="des">In the pursuit of advancing educational innovation, "UniProjects" stands as a pioneering web platform designed to address a critical gap at the University of Dodoma (UDOM), as the platform for students to share their innovation<br>
+                    </div>
+                    <div class="buttons">
+                        <button><a href="{% url 'projects' %}" style="color: white;">GET STARTED</a></button>
+                       
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{% static 'image/image2.png' %}" alt="" srcset="">
+                <div class="content">
+                  <div class="title">UNIPROJECT FOR</div>
+                  <div class="topic">LEARNING</div>
+                    <div class="des">  In exploring the significance and impact of student project showcase platforms, UniProjects seeks to uncover success stories, challenges, and invaluable lessons learned from comparable initiatives.<br>
+                    </div>
+                    <div class="buttons">
+                        <button><a href="{% url 'projects' %}" style="color: white;">GET STARTED</a></button>
+
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{% static 'image/image3.png' %}" alt="" srcset="">
+                <div class="content">
+                  <div class="title">UNIPROJECT FOR</div>
+                  <div class="topic">CREATIVITY</div>
+                    <div class="des">In the pursuit of advancing educational innovation, "UniProjects" stands as a pioneering web platform designed to address a critical gap at the University of Dodoma (UDOM), as the platform for students to share their innovation<br>
+
+                    </div>
+                    <div class="buttons">
+                        <button><a href="{% url 'projects' %}" style="color: white;">GET STARTED</a></button>
+
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{% static 'image/image4.png' %}" alt="" srcset="">
+                <div class="content">
+                  <div class="title">UNIPROJECT FOR</div>
+                  <div class="topic">RESEARCH</div>
+                    <div class="des">In exploring the significance and impact of student project showcase platforms, UniProjects seeks to uncover success stories, challenges, and invaluable lessons learned from comparable initiatives.<br>
+
+                    </div>
+                    <div class="buttons">
+                        <button><a href="{% url 'projects' %}" style="color: white;">GET STARTED</a></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- thumnail -->
+        <div class="thumbnail">
+
+            <div class="item">
+                <img src="{% static 'image/image2.png' %}" alt="" srcset="">
+                <div class="content">
+                    <div class="title">
+                        Innovation
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{% static 'image/image3.png' %}" alt="" srcset="">
+                <div class="content">
+                    <div class="title">
+                        Learning
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{% static 'image/image4.png' %}" alt="" srcset="">
+                <div class="content">
+                    <div class="title">
+                        Creativity
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <img src="{% static 'image/image1.png' %}" alt="" srcset="">
+                <div class="content">
+                    <div class="title">
+                        Research
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- arrows -->
+    <div class="arrows">
+        <button id="prev"><</button>
+        <button id="next">></button>
+    </div>
+    
+<script>
+//step 1: get DOM
+let nextDom = document.getElementById('next');
+let prevDom = document.getElementById('prev');
+
+let carouselDom = document.querySelector('.carousel');
+let SliderDom = carouselDom.querySelector('.carousel .list');
+let thumbnailBorderDom = document.querySelector('.carousel .thumbnail');
+let thumbnailItemsDom = thumbnailBorderDom.querySelectorAll('.item');
+let timeDom = document.querySelector('.carousel .time');
+
+thumbnailBorderDom.appendChild(thumbnailItemsDom[0]);
+let timeRunning = 3000;
+let timeAutoNext = 7000;
+
+nextDom.onclick = function(){
+    showSlider('next');
+}
+
+prevDom.onclick = function(){
+    showSlider('prev');
+}
+let runTimeOut;
+let runNextAuto = setTimeout(() => {
+    next.click();
+}, timeAutoNext)
+function showSlider(type){
+    let  SliderItemsDom = SliderDom.querySelectorAll('.carousel .list .item');
+    let thumbnailItemsDom = document.querySelectorAll('.carousel .thumbnail .item');
+
+    if(type === 'next'){
+        SliderDom.appendChild(SliderItemsDom[0]);
+        thumbnailBorderDom.appendChild(thumbnailItemsDom[0]);
+        carouselDom.classList.add('next');
+    }else{
+        SliderDom.prepend(SliderItemsDom[SliderItemsDom.length - 1]);
+        thumbnailBorderDom.prepend(thumbnailItemsDom[thumbnailItemsDom.length - 1]);
+        carouselDom.classList.add('prev');
+    }
+    clearTimeout(runTimeOut);
+    runTimeOut = setTimeout(() => {
+        carouselDom.classList.remove('next');
+        carouselDom.classList.remove('prev');
+    }, timeRunning);
+
+    clearTimeout(runNextAuto);
+    runNextAuto = setTimeout(() => {
+        next.click();
+    }, timeAutoNext)
+}
+
+</script>
+{% endblock %}
