--- a/projects/templates/projects/projects.html
+++ b/projects/templates/projects/projects.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="hero-section__search">
-          <form id="searchForm" class="form" action="{% url 'projects' %}" method="get">
+          <form class="form" action="{% url 'projects' %}" method="get">
             <div class="form__field">
               <label for="formInput#search">Search By Projects </label>
               <input class="input input--text" id="formInput#search" type="text" name="search_query"
@@ -23,7 +23,7 @@
 
             <input class="btn btn--sub btn--lg" type="submit" value="Search" />
           </form>
-      </div>
+        </div>
 
     </div>
     </section>
