--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -1,9 +1,9 @@
 :root {
-  --color-sub: #2d2d39;
+  --color-sub: #013374;
 }
 
 .btn--sub {
-  background-color: var(--color-sub-light);
+  background-color:#1356ad;
 }
 
 .card {
