--- a/users/templates/users/profiles.html
+++ b/users/templates/users/profiles.html
@@ -13,7 +13,7 @@
 
         <div class="hero-section__search">
 
-          <form id="searchForm" class="form" action="{% url 'profiles' %}" method="get">
+          <form  class="form" action="{% url 'profiles' %}" method="get">
             
               <div class="form__field">
                   <label for="formInput#search">Search Developers </label>
