--- a/users/templates/users/skill_form.html
+++ b/users/templates/users/skill_form.html
@@ -23,7 +23,7 @@
                     </div>
                        
                     {% endfor %}
-                    <input type="submit" value="Submit">
+                    <!-- <input type="submit" value="Submit"> -->
                    
                  
                     <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
